added content to favorite websites blog

--- a/favorite_websites.html
+++ b/favorite_websites.html
@@ -9,9 +9,10 @@
 <h1>My Favorite Websites</h1>
 <ul>
 	<li><a href = "http://www.pinterest.com">Pinterest</a></li>
-		<p>Pinterest has to be my favorite way to procrastinate. It is a website filled with 'do it yourself' projects, clothes, and inspiration. The website is very clean cut with sharp lines and eye pleasing colors. Words to describe this webpage visually would be clean, nonclutered, elegant, light, and colorful. This website is a place for women (or men) to come to, to get inspiration for anything from clothes, to hair, to home decor. It is definitely more of a fun yet practical website, and the visual design matches the purpose of the website extremely well. Not only do I love how much time I can waste on this website, but I love the design, layout, and ease of use.</p></br>
+		<p>	Pinterest has to be my favorite way to procrastinate. It is a website filled with 'do it yourself' projects, clothes, and inspiration. The website is very clean cut with sharp lines and eye pleasing colors. Words to describe this webpage visually would be clean, nonclutered, elegant, light, and colorful. This website is a place for women (or men) to come to, to get inspiration for anything from clothes, to hair, to home decor. It is definitely more of a fun yet practical website, and the visual design matches the purpose of the website extremely well. Not only do I love how much time I can waste on this website, but I love the design, layout, and ease of use.</p></br>
 	<li><a href = "https://www.fanfiction.net">Fanfiction</a></li>
-		<p></p>
+		<p>	Fanfiction is a website that budding writers can come and submit pieces of their writing for the world to read. In general, the stories are based off of other published books, movies, or games, but still maintain originality and imagination. I am an avid reader and I go to fanfiction often to explore new authors and read free stories from promising new authors. 
+		The website design is extremely simple. It is bare minimum of web design possible. To describe it in words would be basic, simple, and light. The purpose of this website is a community to sumbit and read imaginative pieces of writing. A overdesigned, cluttered website would deter from this purpose. I wouldn't mind if they maybe did a small update though. In the 10 years I've used this site, it hasn't changed at all. Change is sometimes good... just saying ;) </p>
 	<li><a href = "http://www.amazon.com">Amazon</a></li>
 		<p></p>
 </ul>
