add content to index

--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <html>
 <head>
 
+	<link rel="stylesheet" type="text/css" href="index.css">
+	<title>Jessica Tatham Homepage</title>
+
 </head>
+
 <body>
 
-	<a href = "dbc1.html">Jessica Tatham!</a>
-</br>
-	<a href = "favorite_websites.html">My Favorite Websites!</a>
+<header>
+	<h1> <strong>A catchy title</strong> </n1>
+</header>
+
+<nav>
+	<a href = "index.html">Homepage</a>
+	<a href = "dbc1.html">About Me</a>
+	<a href = "favorite_websites.html">Blog</a>
+	<a href = "dbc2.html">Photography</a>
+	<a href = "">Videos</a>
+</nav>
+
+<section>
+	<p></p>
+</section>
+
+<footer>
+	<nav><h4> <a href="mailto:jectatham@gmail.com?subject=Greetings%20from%20your%20website!&body=%20What%20would%20you%20like%20to%20tell%20Jessica?">Email Jessica</a></h4></nav>
+	<nav><h4><a href="https://www.facebook.com/JessicaHTatham">Facebook</a></h4><nav>
+	<nav><h4><a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">LinkedIn</a></h4><nav>
+	<p>Posted by: Jessica Tatham</p>
+	<p><time pubdate datetime = "2014-03-16"></time></p>
+</footer>
 
 </body>
 </html>
