--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
 </nav>
 
 <section>
-	<p></p>
+	<p> text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE </p>
 </section>
 
 <footer>
-	<nav><h4> <a href="mailto:jectatham@gmail.com?subject=Greetings%20from%20your%20website!&body=%20What%20would%20you%20like%20to%20tell%20Jessica?">Email Jessica</a></h4></nav>
-	<nav><h4><a href="https://www.facebook.com/JessicaHTatham">Facebook</a></h4><nav>
-	<nav><h4><a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">LinkedIn</a></h4><nav>
+	<nav>
+		<a href="mailto:jectatham@gmail.com?subject=Greetings%20from%20your%20website!&body=%20What%20would%20you%20like%20to%20tell%20Jessica?">Email Jessica</a>
+		<a href="https://www.facebook.com/JessicaHTatham">Facebook</a>
+		<a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">LinkedIn</a>
+	</nav>
 	<p>Posted by: Jessica Tatham</p>
 	<p><time pubdate datetime = "2014-03-16"></time></p>
 </footer>
