add image as background

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-	<h1> <strong>A good title</strong> </n1>
+	<h1> <strong>Around the World and Back Again</strong> </n1>
 </header>
 
 <nav>
