--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 	<a href = "dbc2.html">Photography</a>
 	<a href = "">Videos</a>
 </nav>
-
+<div class= "background" align="center">
+<img src = 'images/IMG_3013 2.JPG'/>
+</div>
 <section>
 	<p> text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE </p>
 </section>
