--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
 	<a href = "dbc2.html">Photography</a>
 	<a href = "">Videos</a>
 </nav>
-<div class= "background" align="center">
+
+<div class="background"/>
 <img src = 'images/IMG_3013 2.JPG'/>
-</div>
+
+
 <section>
 	<p> text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE </p>
 </section>
-
+</div>
 <footer>
 	<nav>
 		<a href="mailto:jectatham@gmail.com?subject=Greetings%20from%20your%20website!&body=%20What%20would%20you%20like%20to%20tell%20Jessica?">Email Jessica</a>
