--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </nav>
 
 <div class="background" align="center">
-<img src = 'images/IMG_3013 2.JPG' alt = "images/IMG_3013 2.JPG" height = "800" width="1200"/>
+<img src = 'images/IMG_3013 2.JPG' alt = "images/IMG_3013 2.JPG"/>
 </div>
 
 <section>
