--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <header>
 	<h1> <strong>Around the World and Back Again</strong> </n1>
+	<div class= "tb" align = "center"> <img src = 'images/IMG_3729 2.JPG' alt = "images/IMG_3729 2.JPG" width= "900"
+	height= auto/></div>
 </header>
 
 <nav>
