background title image transparent

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <header>
 	<h1> <strong>Around the World and Back Again</strong> </n1>
-	<div class= "tb" align = "center"> <img src = 'images/IMG_3729 2.JPG' alt = "images/IMG_3729 2.JPG" width= "900"
-	height= auto/></div>
+	<div align = "center"> <img src = 'images/IMG_3729 2.JPG' class= "tb" alt = "images/IMG_3729 2.JPG"/></div>
 </header>
 
 <nav>
@@ -22,10 +21,7 @@
 	<a href = "">Videos</a>
 </nav>
 
-<div class="background" align="center">
-<img src = 'images/IMG_3013 2.JPG' alt = "images/IMG_3013 2.JPG" width= "900"
-	height= auto/>
-</div>
+
 
 <section>
 	<p> <strong>text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE text goes here TEXT GOES HERE </strong></p>
