--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
 
 <header>
+	<div align = "center" class="tb">
 	<h1> <strong>Around the World and Back Again</strong> </n1>
-	<div align = "center"> <img src = 'images/IMG_3729 2.JPG' class= "tb" alt = "images/IMG_3729 2.JPG"/></div>
+	<img src = 'images/IMG_3729 2.JPG' alt = "images/IMG_3729 2.JPG"/></div>
 </header>
 
 <nav>
