--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
 
 <header>
-	<div align = "center" class="tb">
 	<h1> <strong>Around the World and Back Again</strong> </n1>
-	<img src = 'images/IMG_3729 2.JPG' alt = "images/IMG_3729 2.JPG"/></div>
+	<div align = "center" class="tb">
+		<img src = 'images/IMG_3729 2.JPG' alt = "images/IMG_3729 2.JPG"/>
+	</div>
 </header>
 
 <nav>
