--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <header>
 	<h1> <strong>Around the World and Back Again</strong> </n1>
-	<div align = "center" class="tb">
-		<img src = 'images/IMG_3729 2.JPG' alt = "images/IMG_3729 2.JPG"/>
+	<div class="tb">
+		<img src = 'images/IMG_3729 2.JPG' align = "center"/>
 	</div>
 </header>
 
