trying out fig caption

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 	<a href = "">Videos</a>
 </nav>
 
+<figure><img src = 'images/IMG_3729 2.JPG' alt="Sunrise" width="1500" height=auto>
+	<figcaption>Around the World and Back Again</figcaption>
+</figure>
 
 
 <section>
