--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <header>
 	
-<figure><img src = 'images/IMG_3729 2.JPG' alt="Sunrise" width="1500" height=auto>
-	<figcaption>Around the World and Back Again</figcaption>
+<figure><img src = 'images/IMG_3729 2.JPG' alt="Sunrise" width="1300" height=auto>
+	<figcaption align="center">Around the World and Back Again</figcaption>
 </figure>
 
 </header>
