--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </header>
 
-<nav>
+<nav class="button">
 	<a href = "index.html">Homepage</a>
 	<a href = "dbc1.html">About Me</a>
 	<a href = "favorite_websites.html">Blog</a>
