--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ And that has made all the difference. </br>
 Robert Frost </strong></p>
 </section>
 <footer>
-	<nav>
+	<nav class= "button">
 		<a href="mailto:jectatham@gmail.com?subject=Greetings%20from%20your%20website!&body=%20What%20would%20you%20like%20to%20tell%20Jessica?">Email Jessica</a>
 		<a href="https://www.facebook.com/JessicaHTatham">Facebook</a>
 		<a href="http://www.linkedin.com/profile/view?id=152902087&trk=nav_responsive_tab_profile_pic">LinkedIn</a>
