--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <nav class="button">
 	<a href = "index.html">Homepage</a>
 	<a href = "dbc1.html">About Me</a>
-	<a href = "favorite_websites.html">Blog</a>
+	<a href = "blog.html">Blog</a>
 	<a href = "dbc2.html">Photography</a>
 	<a href = "">Videos</a>
 </nav>
