--- a/week2_technical.html
+++ b/week2_technical.html
@@ -4,7 +4,7 @@
 	<title>Blog Spot</title>
 </head>
 <body>
-	<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="index.css">
 
 <header>
 	
@@ -22,17 +22,9 @@
 	<a href = "">Videos</a>
 </nav>
 
-<h1> Blog Spot </h1>
+<h1>Why is JavaScript so popular in web development?</h1>
 
-<h2> Here are my blogs: </h2></br>
-
-<div class = "blogs"> 
-	<a href = "favorite_websites.html"> Favorite Websites </a> </br>
-	<a href = "week2_cultural_blog.html"> Values of Happiness </a> </br>
-	<a href = "week2_technical.html"> A little bit technical </a>
-</div>
-
-
+<p></p>
 
 </body>
 
