--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
 <div class = "blogs"> 
 	<a href = "favorite_websites.html"> Favorite Websites </a> </br>
 	<a href = "week2_cultural_blog.html"> Values of Happiness </a> </br>
-	<a href = "week2_technical.html"> A little bit technical </a>
+	<a href = "week2_technical.html"> A Little Bit Technical </a>
 </div>
 
 
