--- a/week2_technical.html
+++ b/week2_technical.html
@@ -22,7 +22,7 @@
 	<a href = "">Videos</a>
 </nav>
 
-<h1>Why is JavaScript so popular in web development?</h1>
+</br><h1>Why is JavaScript so popular in web development?</h1>
 
 <p></p>
 
