--- a/vidios.html
+++ b/vidios.html
@@ -22,9 +22,9 @@
 	<a href = "vidios.html">Videos</a>
 </nav>
 
-</br><h1>Why is JavaScript so popular in web development?</h1>
+</br><h1>My Travels</h1>
 
-<p></p>
+
 
 </body>
 
