--- a/week2_cultural_blog.html
+++ b/week2_cultural_blog.html
@@ -19,7 +19,7 @@
 	<a href = "dbc1.html">About Me</a>
 	<a href = "blog.html">Blog</a>
 	<a href = "dbc2.html">Photography</a>
-	<a href = "">Videos</a>
+	<a href = "vidios.html">Videos</a>
 </nav>
 
 </br><h1>Values of Happiness</h1>
