--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<a href = "dbc1.html">About Me</a>
 	<a href = "blog.html">Blog</a>
 	<a href = "dbc2.html">Photography</a>
-	<a href = "">Videos</a>
+	<a href = "vidios.html">Videos</a>
 </nav>
 
 
