--- a/week2_cultural_blog.html
+++ b/week2_cultural_blog.html
@@ -22,7 +22,7 @@
 	<a href = "vidios.html">Videos</a>
 </nav>
 
-</br><h1>Values of Happiness</h1>
+</br><h1>Values of Happiness</h1></br>
 
 <p></p>
 
