--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
 
 <section>
-	<p> <strong>Two roads diverged in a yellow wood, </br>
+	</br></br><p> 
+<strong>Two roads diverged in a yellow wood, </br>
 And sorry I could not travel both</br>
 And be one traveler, long I stood<br>
 And looked down one as far as I could</br>
