--- a/week2_cultural_blog.html
+++ b/week2_cultural_blog.html
@@ -24,7 +24,11 @@
 
 </br><h1>Values of Happiness</h1></br>
 
-<p></p>
+<p>Accomplishment, Friendships, Family, Independence, Movement, Nature, Physical challenge, Inspiration</p>
+
+<p>To me, a fulfilled life and how happy you are with it are completely up to you. You decide how you live your life and you are the only one that can change it. </p>
+
+<p>My happiest, proudest and most satisfying moments in life can all be summed up in the word 'adventure'</p>
 
 </body>
 
