--- a/week2_cultural_blog.html
+++ b/week2_cultural_blog.html
@@ -26,9 +26,16 @@
 
 <p>Accomplishment, Friendships, Family, Independence, Movement, Nature, Physical challenge, Inspiration</p>
 
-<p>To me, a fulfilled life and how happy you are with it are completely up to you. You decide how you live your life and you are the only one that can change it. </p>
+<p>
+When I think of my happiest, proudest and most satisfying moments in life, they can all be summed up in the word 'adventure'. My family has always lived by the idea of 'Do one thing everyday that scares yoy.' This one quote has filled my life with unforgetable memories. Snippets in time where I have: been lost in the snowtopped Swiss Alps, hotair ballooned over the fairy chimneys in Cappadocia, whitewater rafted down the Zambizi river, and pubcrawled through undercround bars in Prague. Sometimes, adventure can lead you into some very uncomfortable positions, and somtimes it will bring you unimaginable joy, but either way, you come out of it a better person. 
+So, when I think about my most satisfying moments in life, I think about the moments where I have been pushed to my highest limits, and come out the otherside still smiling. To me, a fulfilled life and how happy you are with it are completely up to you. You decide how you live your life and you are the only one that can change it. 
+</p>
 
-<p>My happiest, proudest and most satisfying moments in life can all be summed up in the word 'adventure'</p>
+</br><h1>Living up to my values </h1></br>
+<p> I always try to live up to my values of happiness, but we all have days where we just want to sit on the couch and do nothing. So therefore, I would say I would give myself a (4) in living up to my values of happiness. </p>
+
+</br><h1> Advice </h1></br>
+<p> The last topic that someone asked my for advice on was about backpacking in Europe. I just recently returned from a 6 month backpacking trip and an old friend of mine messaged me asking for any advice I had. I gave him some ideas about where to go and what to do as well as what to bring and not bring. It was extremely satisfying helping someone with their future adventure and getting to share a little bit about my about my travels with a fellow backpacker. </p>
 
 </body>
 
