updating spacing on blog

--- a/week2_cultural_blog.html
+++ b/week2_cultural_blog.html
@@ -31,11 +31,11 @@ When I think of my happiest, proudest and most satisfying moments in life, they 
 So, when I think about my most satisfying moments in life, I think about the moments where I have been pushed to my highest limits, and come out the otherside still smiling. To me, a fulfilled life and how happy you are with it are completely up to you. You decide how you live your life and you are the only one that can change it. 
 </p>
 
-</br><h1>Living up to my values </h1></br>
+</br><h2>Living up to my values </h1>
 <p> I always try to live up to my values of happiness, but we all have days where we just want to sit on the couch and do nothing. So therefore, I would say I would give myself a (4) in living up to my values of happiness. </p>
 
-</br><h1> Advice </h1></br>
-<p> The last topic that someone asked my for advice on was about backpacking in Europe. I just recently returned from a 6 month backpacking trip and an old friend of mine messaged me asking for any advice I had. I gave him some ideas about where to go and what to do as well as what to bring and not bring. It was extremely satisfying helping someone with their future adventure and getting to share a little bit about my about my travels with a fellow backpacker. </p>
+</br><h2> Advice </h1>
+<p> The last topic that someone asked my for advice on was about backpacking in Europe. I just recently returned from a 6 month backpacking trip and an old friend of mine messaged me asking for any advice I had. I gave him some ideas about where to go and what to do as well as what to bring and not bring. It was extremely satisfying helping someone with their future adventure and getting to share a little bit about my about my travels with a fellow backpacker. </p> </br></br>
 
 </body>
 
