updating tech blog

--- a/week2_technical.html
+++ b/week2_technical.html
@@ -22,9 +22,13 @@
 	<a href = "vidios.html">Videos</a>
 </nav>
 
-</br><h1>Why is JavaScript so popular in web development?</h1>
+</br><h1>Why is JavaScript so popular in web development?</h1></br>
 
-<p></p>
+<p>When thinking about my answer for this question, I did what any normal girl living in the 21st century does... I googled it :) The top answers ranged from: 'It's easy, fast and powerful' to 'It is simply what is known and what is used'. 
+The idea that it is easy and fast obviously makes sense, as no one would use it otherwise, but the idea that it is popular because it is what people know, makes more sense to me. As humans, so much of what we do, we do because it is comfortable and well known for us. You buy a specific brand of toothpaste, because it is what you have always bought. Or you go to the same restraunt and order the same meal every Sunday because that is what you have always done. When it comes to web developement, it makes complete sense to me that the reason JavaScript is so popular in web development is because that is what is most common to use. 
+I'm not saying that this is a bad thing. Obviously JS has managed to stay the top dog because it has other wonderful attributes other than being well known. I'm just exploring other possibilities that maybe haven't been brought forward yet.
+
+Just a thought :)</p>
 
 </body>
 
