--- a/week3_technical_blog.html
+++ b/week3_technical_blog.html
@@ -4,7 +4,7 @@
 	<title>Blog Spot</title>
 </head>
 <body>
-	<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="index.css">
 
 <header>
 	
@@ -19,21 +19,12 @@
 	<a href = "dbc1.html">About Me</a>
 	<a href = "blog.html">Blog</a>
 	<a href = "dbc2.html">Photography</a>
-	<a href = "">Videos</a>
+	<a href = "vidios.html">Videos</a>
 </nav>
 
-<h1> Blog Spot </h1>
+</br><h1>Looping in Ruby</h1></br>
 
-<h2> Here are my blogs: </h2></br>
-
-<div class = "blogs"> 
-	<a href = "favorite_websites.html"> Favorite Websites </a> </br>
-	<a href = "week2_cultural_blog.html"> Values of Happiness </a> </br>
-	<a href = "week2_technical.html"> A Little Bit Technical </a></br>
-	<a href = "week3_technical.html"> A Little Bit Technical </a>
-</div>
-
-
+<p> </p> </br></br>
 
 </body>
 
