updating blog posts

--- a/week3_cultural_blog.html
+++ b/week3_cultural_blog.html
@@ -22,27 +22,10 @@
 	<a href = "vidios.html">Videos</a>
 </nav>
 
-</br><h1>Looping in Ruby</h1></br>
+</br><h1>Pair Programming</h1></br>
 
 <p>
-First, lets start with 'What is a loop?' Computer programming languages, such as ruby, often need to execute the same block of code multiple times. Instead of repeating yourself over and over again, you can use a loop. Now lets learn about some of those loop statements!
- </p> </br>
-<h3>While</h3>
-	<p></p>
-	<h4> Example </h4>
-<h3>Until</h3>
-	<p></p>
-	<h4> Example </h4>
-<h3>Times</h3>
-	<p></p>
-	<h4> Example </h4>
-<h3>Each</h3>
-	<p></p>
-	<h4> Example </h4>
-<h3>For</h3>
-	<p></p>
-	<h4> Example </h4>
-
+</p>
 
 </br>
 
