create blog post

--- a/blog.html
+++ b/blog.html
@@ -30,6 +30,7 @@
 	<a href = "favorite_websites.html"> Favorite Websites </a> </br>
 	<a href = "week2_cultural_blog.html"> Values of Happiness </a> </br>
 	<a href = "week2_technical.html"> A Little Bit Technical </a></br>
+	<a href = "week3_cultural_blog.html"> Pair Programming</a> </br>
 	<a href = "week3_technical.html"> A Little Bit More Technical </a>
 </div>
 
