updating blog post

--- a/week3_cultural_blog.html
+++ b/week3_cultural_blog.html
@@ -22,10 +22,17 @@
 	<a href = "vidios.html">Videos</a>
 </nav>
 
-</br><h1>Pair Programming</h1></br>
+</br><h1>Paired Programming and Feedback</h1></br>
+<p> Taking a look into paired programming at DBC!!! </p>
 
-<p>
-</p>
+<ul>
+	<h2><li>What was it like to pair with others to solve challenges?</li></h2>
+		<p></p></br>
+	<h2><li>Was something particularly fun or rewarding?</li></h2>
+		<p></p></br>
+	<h2><li>Was something frustrating and difficult for you?</li></h2>
+		<p></p>
+</ul>
 
 </br>
 
