updating blog post

--- a/week3_cultural_blog.html
+++ b/week3_cultural_blog.html
@@ -22,18 +22,33 @@
 	<a href = "vidios.html">Videos</a>
 </nav>
 
-</br><h1>Paired Programming and Feedback</h1></br>
+</br><h1>Paired Programming and Feedback</h1>
 <p> Taking a look into paired programming at DBC!!! </p>
 
-<ul>
-	<h2><li>What was it like to pair with others to solve challenges?</li></h2>
-		<p></p></br>
-	<h2><li>Was something particularly fun or rewarding?</li></h2>
-		<p></p></br>
-	<h2><li>Was something frustrating and difficult for you?</li></h2>
-		<p></p>
-</ul>
 
+	<h2>Pairing:</h2>
+<ul>
+	<h4><li>What was it like to pair with others to solve challenges?</li></h4>
+		<p></p></br>
+	<h4><li>Was something particularly fun or rewarding?</li></h4>
+		<p></p></br>
+	<h4><li>Was something frustrating and difficult for you?</li></h4>
+		<p></p>
+</ul></br>
+
+	<h2>Feedback</h2>
+<ul>
+	<h4><li>How did you feel when you read your feedback?</li></h4>
+		<p></p></br>
+	<h4><li>Was the feedback you received helpful to your learning?</li></h4>
+		<p></p></br>
+	<h4><li>Based on the feedback you've received, what are you going to do to improve next time you pair?</li></h4>
+		<p></p></br>
+	<h4><li>How was it to write feedback?</li></h4>
+		<p></p></br>
+	<h4><li>What was most difficult for you when writing feedback for your pair?</li></h4>
+		<p></p></br>
+</ul>
 </br>
 
 </body>
