Upload blog post

--- a/week3_cultural_blog.html
+++ b/week3_cultural_blog.html
@@ -23,17 +23,17 @@
 </nav>
 
 </br><h1>Paired Programming and Feedback</h1>
-<p> Taking a look into paired programming at DBC!!! </p>
+<p> Taking a look into paired programming and giving feedback at DBC!!! </p>
 
 
 	<h2>Pairing:</h2>
 <ul>
 	<h4><li>What was it like to pair with others to solve challenges?</li></h4>
-		<p></p></br>
+		<p>I have loved pairing with others to work through challenges. Everyone brings their own unique input and solutions into the pairing session. There have been times where I was confused about a piece of code and having someone there to talk it through with me is a lot more helpful than trying to research it on my own. Vice versa, there have been times where I have been able to teach what I understand to a fellow student, which for me, is the best way to completely understand a consept.</p></br>
 	<h4><li>Was something particularly fun or rewarding?</li></h4>
-		<p></p></br>
+		<p> I'd say that one of my favorite things about pairing, is getting to know the people in my cohort on a deeper level. It allows us to talk about problems with our challenges as well as what's going on in our daily lives. This to me, is the most rewarding thing about paired programming.</p></br>
 	<h4><li>Was something frustrating and difficult for you?</li></h4>
-		<p></p>
+		<p>At this point of phase 0, the only frustrating thing I've faced with pairing is the time difference. I'm on the west coast and most of the people in my cohort live east coast. The key is trying to remember the 3 hour time difference when planning pairing sessions.</p>
 </ul></br>
 
 	<h2>Feedback</h2>
