updating blog post

--- a/week3_cultural_blog.html
+++ b/week3_cultural_blog.html
@@ -39,15 +39,15 @@
 	<h2>Feedback</h2>
 <ul>
 	<h4><li>How did you feel when you read your feedback?</li></h4>
-		<p></p></br>
+		<p>n/a</p></br>
 	<h4><li>Was the feedback you received helpful to your learning?</li></h4>
-		<p></p></br>
+		<p>n/a</p></br>
 	<h4><li>Based on the feedback you've received, what are you going to do to improve next time you pair?</li></h4>
-		<p></p></br>
+		<p>n/a</p></br>
 	<h4><li>How was it to write feedback?</li></h4>
-		<p></p></br>
+		<p>  Writing feedback was an interesting experience. I found it easy to write about the good things that my partner did and how great we work together, but writing something constructive and actionable was a whole different story. Writing feedback that is specific, actionable and kind is key, but it's easier said than done.</p></br>
 	<h4><li>What was most difficult for you when writing feedback for your pair?</li></h4>
-		<p></p></br>
+		<p>I found it really difficult to write feedback. It's always easy to talk about what went right and how great everyone is, but the real challenge was coming up with something constructive that your partner can fix.</p></br>
 </ul>
 </br>
 
