add examples of loops to blog

--- a/week3_technical.html
+++ b/week3_technical.html
@@ -30,18 +30,23 @@ First, lets start with 'What is a loop?' Computer programming languages, such as
 <h3>While</h3>
 	<p></p>
 	<h4> Example </h4>
+		<p><img src = "while_example.png"></p>
 <h3>Until</h3>
 	<p></p>
 	<h4> Example </h4>
+		<p><img src = "until_example.png"></p>
 <h3>Times</h3>
 	<p></p>
 	<h4> Example </h4>
+		<p><img src = "times_example.png"></p>
 <h3>Each</h3>
 	<p></p>
 	<h4> Example </h4>
+		<p><img src = "each_example.png"></p>
 <h3>For</h3>
 	<p></p>
 	<h4> Example </h4>
+		<p><img src = "for_example.png"></p>
 
 
 </br>
