update technical blog

--- a/week3_technical.html
+++ b/week3_technical.html
@@ -28,25 +28,27 @@
 First, lets start with 'What is a loop?' Computer programming languages, such as ruby, often need to execute the same block of code multiple times. Instead of repeating yourself over and over again, you can use a loop. Now lets learn about some of those loop statements!
  </p> </br>
 <h3>While</h3>
-	<p></p>
+	<p>A while loop will continue to complete the code while the condition remains true. When the condition becomes false, the loop will stop.
+
+	</p>
 	<h4> Example </h4>
-		<p><img src = "while_example.png"></p>
+		<p><img src = "while_example.png"></p></br>
 <h3>Until</h3>
-	<p></p>
+	<p>A until loop will continue to complete the code until the condition is met (true). After the condition is met, the loop will stop.</p>
 	<h4> Example </h4>
-		<p><img src = "until_example.png"></p>
+		<p><img src = "until_example.png"></p></br>
 <h3>Times</h3>
-	<p></p>
+	<p>A times loop will run the code however many times is input by the user. </p>
 	<h4> Example </h4>
-		<p><img src = "times_example.png"></p>
+		<p><img src = "times_example.png"></p></br>
 <h3>Each</h3>
-	<p></p>
+	<p>The each loop will take a list of variables and run the code for each of them. Once all of the variables have been run through the code, the loop will stop.</p>
 	<h4> Example </h4>
-		<p><img src = "each_example.png"></p>
+		<p><img src = "each_example.png"></p></br>
 <h3>For</h3>
-	<p></p>
+	<p>The for loop, otherwise known as the for/in loop, will complete the code for all variables in the stated collection. When there are no more specified variables, the loop will stop.</p>
 	<h4> Example </h4>
-		<p><img src = "for_example.png"></p>
+		<p><img src = "for_example.png"></p></br>
 
 
 </br>
