--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,8 @@
 	<a href = "week2_technical.html"> A Little Bit Technical </a></br>
 	<a href = "week3_cultural_blog.html"> Paired Programming and Giving Feedback</a> </br>
 	<a href = "week3_technical.html"> A Little Bit More Technical </a>
+	<a href = "week4_tech_blog.html"> Let's learn something technical </a>
+	<a href = "week4_cultural_blog.html"> Conflicting emotions </a>
 </div>
 
 
