spacing on blog home

--- a/blog.html
+++ b/blog.html
@@ -27,13 +27,15 @@
 <h2> Here are my blogs: </h2></br>
 
 <div class = "blogs"> 
-	<a href = "favorite_websites.html"> Favorite Websites </a> </br>
-	<a href = "week2_cultural_blog.html"> Values of Happiness </a> </br>
-	<a href = "week2_technical.html"> A Little Bit Technical </a></br>
-	<a href = "week3_cultural_blog.html"> Paired Programming and Giving Feedback</a> </br>
-	<a href = "week3_technical.html"> A Little Bit More Technical </a></br>
-	<a href = "week4_tech_blog.html"> Let's learn something technical </a></br>
-	<a href = "week4_cultural_blog.html"> Conflicting emotions </a>
+<ol>
+	<li><a href = "favorite_websites.html"> Favorite Websites </a> </li></br>
+	<li><a href = "week2_cultural_blog.html"> Values of Happiness </a></li> </br>
+	<li><a href = "week2_technical.html"> A Little Bit Technical </a></li></br>
+	<li><a href = "week3_cultural_blog.html"> Paired Programming and Giving Feedback</a></li> </br>
+	<li><a href = "week3_technical.html"> A Little Bit More Technical </a></li></br>
+	<li><a href = "week4_tech_blog.html"> Let's learn something technical </a></li></br>
+	<li><a href = "week4_cultural_blog.html"> Conflicting emotions </a></li>
+</ol>
 </div>
 
 
