update tech blog

--- a/week4_tech_blog.html
+++ b/week4_tech_blog.html
@@ -1,15 +1,15 @@
 <DOCTYPE! html>
 <html>
 <head>
-	<title>Favorite websites</title>
+	<title>Something Technical</title>
 </head>
 <body>
 	<link rel="stylesheet" type="text/css" href="favorite_website.css">
 
-<h1>My Favorite Websites</h1>
-<ul>
-	<li><
-</ul>
+<h1>Let's learn something technical</h1> </br>
+<h2> #Map </h2>
+<p></p>
+
 </body>
 
 </html>
