update tech blog

--- a/week4_cultural_blog.html
+++ b/week4_cultural_blog.html
@@ -20,7 +20,7 @@
 	<li>Did your actions make the conflict better or worse?</li>
 		<p>I have to take it day by day. Some days, we successfully talk about what they need to do and they arrange a deal with me where they can relax for half and hour and then work. When they're open for communication, we get along great and there is no conflict. It's the days when they refuse to even talk, that we run into problems.</p>
 	<li>If you could go back, what would you do differently, if anything?</li>
-		<p>Possibly, not become a nanny ;) Just kidding! I love kids! </p>
+		<p>Possibly, not become a nanny ;) Just kidding! I love kids, but I know that I have a patience problem. Ultimately, I like things to be done quickly and efficiently. This doesn't go well with being a nanny. My own lack of patience is definitely a factor that contributes to our constent conflicts. If I was more patient and gave them time to rebel a little before I push the issue at hand, instead of insisting it get done now, I think the boys would be more open to listening to me. This also stems to their need for attention. By reacting to their acts of rebellion by insiting they do their homework, I am giving them that attention that they are wanting, even if its negative. I need to work harder on giving them more positive attention, so that maybe in the future they won't go out seeking the negative attention.</p>
 	<li>What did you learn from this experience?</li>
 		<p>I have learned that when it comes to kids, sometimes playing nice works, but when in doubt, take away the video games and all conflict is resolved!</p>
 </ol>
