--- a/week4_tech_blog.html
+++ b/week4_tech_blog.html
@@ -7,8 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="favorite_website.css">
 
 <h1>Let's learn something technical</h1> </br>
-<h2> #Map </h2>
-<p></p>
+<h1> #map </h1>
+<p>First things first, the map method is a loop. I discussed a couple of loops in last weeks blog that all do very similar things, and the map loop is no different. It's main function is looping through the input and performing some function on each element of the input. #map is an enumerable. Don't know what that is? I didn't either! So of course, I googled it :) From what I can understand from the very unhelpful definition in the ruby docs, an enumerable is a class of methods that can be assigned any element as the input. Probably that isn't exactly right, but for now, it's the best I've got! So as an Enumerable#map, the method transforms each element in the input however you want. For example</p>
+
+<img src = "citiesmapexample.png"/>
 
 </body>
 
