--- a/week4_tech_blog.html
+++ b/week4_tech_blog.html
@@ -8,9 +8,17 @@
 
 <h1>Let's learn something technical</h1> </br>
 <h1> #map </h1>
-<p>First things first, the map method is a loop. I discussed a couple of loops in last weeks blog that all do very similar things, and the map loop is no different. It's main function is looping through the input and performing some function on each element of the input. #map is an enumerable. Don't know what that is? I didn't either! So of course, I googled it :) From what I can understand from the very unhelpful definition in the ruby docs, an enumerable is a class of methods that can be assigned any element as the input. Probably that isn't exactly right, but for now, it's the best I've got! So as an Enumerable#map, the method transforms each element in the input however you want. For example</p>
+<p>First things first, the map method is a loop. I discussed a couple of loops in last weeks blog that all do very similar things, and the map loop is no different. It's main function is looping through the input and performing some function on each element of the input. #map is an enumerable. Don't know what that is? I didn't either! So of course, I googled it :) From what I can understand from the very unhelpful definition in the ruby docs, an enumerable is a class of methods that can be assigned any element as the input. Probably that isn't exactly right, but for now, it's the best I've got! So as an Enumerable#map, the method transforms each element in the input however you want.
+
+</p>
+
+<p>For example: </p>
 
 <h1><img src = "citiesmapexample.png"/></h1>
+
+<p>So as you can see, the input is the array, cities. The #map method takes the cities as the element and capitalizes each element in the array. I have also added in the #join method, just to make the output look pretty and organized with commas and spaces. This is a very simple example of the #map method, but extremely useful! 
+
+Hopefully this has been as helpful for some of you as it has been for me!</p>
 
 </body>
 
