update spacing in tech blog

--- a/week4_tech_blog.html
+++ b/week4_tech_blog.html
@@ -18,7 +18,9 @@
 
 <p>So as you can see, the input is the array, cities. The #map method takes the cities as the element and capitalizes each element in the array. I have also added in the #join method, just to make the output look pretty and organized with commas and spaces. This is a very simple example of the #map method, but extremely useful! 
 
-Hopefully this has been as helpful for some of you as it has been for me!</p>
+Hopefully this has been as helpful for some of you as it has been for me!
+
+</p>
 
 </body>
 
