--- a/blog.html
+++ b/blog.html
@@ -35,6 +35,8 @@
 	<li><a href = "week3_technical.html"> A Little Bit More Technical </a></li></br>
 	<li><a href = "week4_tech_blog.html"> Let's learn something technical </a></li></br>
 	<li><a href = "week4_cultural_blog.html"> Conflicting emotions </a></li>
+	<li><a href = "week5_tech_blog.html"> Class Is In Session </a></li>
+	<li><a href = "week5_cultural_blog.html"> Problems Facing the Tech World </a></li>
 </ol>
 </div>
 
