--- a/blog.html
+++ b/blog.html
@@ -27,17 +27,17 @@
 <h2> Here are my blogs: </h2></br>
 
 <div class = "blogs"> 
-<ol>
+<ul>
 	<li><a href = "favorite_websites.html"> Favorite Websites </a> </li></br>
 	<li><a href = "week2_cultural_blog.html"> Values of Happiness </a></li> </br>
 	<li><a href = "week2_technical.html"> A Little Bit Technical </a></li></br>
 	<li><a href = "week3_cultural_blog.html"> Paired Programming and Giving Feedback</a></li> </br>
 	<li><a href = "week3_technical.html"> A Little Bit More Technical </a></li></br>
 	<li><a href = "week4_tech_blog.html"> Let's learn something technical </a></li></br>
-	<li><a href = "week4_cultural_blog.html"> Conflicting emotions </a></li>
-	<li><a href = "week5_tech_blog.html"> Class Is In Session </a></li>
-	<li><a href = "week5_cultural_blog.html"> Problems Facing the Tech World </a></li>
-</ol>
+	<li><a href = "week4_cultural_blog.html"> Conflicting emotions </a></li></br>
+	<li><a href = "week5_tech_blog.html"> Class Is In Session </a></li></br>
+	<li><a href = "week5_cultural_blog.html"> Problems Facing the Tech World </a></li></br>
+</ul>
 </div>
 
 
