update tech blog

--- a/week5_tech_blog.html
+++ b/week5_tech_blog.html
@@ -8,6 +8,17 @@
 
 <h1>Class Is In Session</h1>
 
+<p>Being that Ruby is an object-oriented language, everything you use in Ruby is an object. You use the object to do whatever it is that needs to be done, but in order for that to happen, the object needs to hold vital information that allows it to accomplish the tasks. This is where classes come in.</p>
+
+<p>Rubylearning.com states it best: "Think about the things the object  <strong>knows</strong>  and the things the object  <strong>does</strong> . Things an object  <strong>knows</strong>  about itself are called instance variables. The things an object can <strong>do</strong> are called methods."</p>
+
+<p>Take a look at my example bellow. Our Class, Animals, is the object, it contains variables and methods that defines it's purpose in life. The instance variable, animal_type, is the data that the object is provided with. The object can take that data and put it through some methods to receive a desired output. The methods in this class are speak and babies (my brain wasn't working and I couldn't come up with anything clever!) These methods will take the instance variable and deside what your output will be usng the data.</p>
+
+<img src = "class_example.png"/>
+
+<p>I hope this was helpful :)</p>
+
 </body>
+
 
 </html>
